Declared Methods for info display from API and SVG event listener, need to get click to work to send data. Also need to get 2 Letter Code button working.

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -3,7 +3,7 @@
 
   <table class="table1">
     <tr>
-      <th> Country Info: </th>
+      <th> <em>Country Info:</em> </th>
     </tr>
     <tr>
       <td> Capital </td>
