forgot to add country name element to the table, fixed, added a link to the World Bank API website

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -6,6 +6,9 @@
       <th> <em>Country Info:</em> </th>
     </tr>
     <tr>
+      <td> {{ name }} </td>
+    </tr>
+    <tr>
       <td> Capital </td>
       <td> {{ capital }} </td>
     </tr>
