Got the map interactive and able to show the data in my table. Now I only need to make the button functional to fetch data

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -6,6 +6,7 @@
       <th> <em>Country Info:</em> </th>
     </tr>
     <tr>
+      <td> Name </td>
       <td> {{ name }} </td>
     </tr>
     <tr>
@@ -30,11 +31,16 @@
     </tr>
   </table>
 
+  <form>
+    <input type="text" id="countryInput" placeholder="Enter Country Code">
+    <button type="button">Submit</button>
+  </form>
+
 </div>
 
 <div class="row"></div>
 
-<div class="column1">
+<div class="column1" #mapButton>
 
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1010 666" aria-label="World Map" width="100%">
     <path d="m 479.68275,331.6274 -0.077,0.025 -0.258,0.155 -0.147,0.054 -0.134,0.027 -0.105,-0.011 -0.058,-0.091 0.006,-0.139 -0.024,-0.124 -0.02,-0.067 0.038,-0.181 0.086,-0.097 0.119,-0.08 0.188,0.029 0.398,0.116 0.083,0.109 10e-4,0.072 -0.073,0.119 z"
