Cleaned up the project, added some styles and data in the README.txt. Submission Soon.

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,4 +1,4 @@
-
+<!-- Table for Country Information -->
 <div class="column2">
 
   <table class="table1">
@@ -30,14 +30,8 @@
       <td> {{ longitude }} </td>
     </tr>
   </table>
-
-  <form>
-    <input type="text" id="countryInput" placeholder="Enter Country Code">
-    <button type="button">Submit</button>
-  </form>
-
 </div>
-
+<!-- SVG -->
 <div class="row"></div>
 
 <div class="column1" #mapButton>
@@ -554,3 +548,7 @@
   </svg>
 
 </div>
+<p>Data Provided by <a href="https://www.worldbank.org/en/home?_gl=1*1tzqec4*_gcl_au*MTQxMzkwNDMzMi4xNzIzNjYzMDk2" target ="_blank">
+  World Bank API
+</a>
+</p>
